fixing styles to categories.css(size cover), modal.css(buttons stretch )

--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -22,6 +22,7 @@
 
 .categories__cover {
   max-width: 150px;
+  max-height: 150px;
   overflow: hidden;
   position: relative;
   z-index: 1;
