--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -24,12 +24,11 @@
   padding: 15px;
   border-radius: 4px;
 }
-.modal__header {
-}
 
 .modal__title {
   margin: 40px 0;
 }
+
 .modal__btn-close {
   position: absolute;
   top: 15px;
@@ -43,11 +42,11 @@
 .modal__form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   gap: 30px;
   max-height: 500px;
   overflow-y: auto;
-  padding: 5px;
+  padding: 10px;
 }
 
 .modal__description {
